--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Beaver Games : Modern Maze</title>
+<title>Labirent Oyunu</title>
 <style>
 :root {
   --bg:#0b0f26;
